samples/_failures_safe/1761626399_be1df7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aaed96cc.c: In function ‘main’:
./samples/SAFE/__tmp_aaed96cc.c:142:5: error: expected expression at end of input
  142 |     add_edge(&g, 1, 2,
      |     ^~~~~~~~
./samples/SAFE/__tmp_aaed96cc.c:142:5: error: expected declaration or statement at end of input
